--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,13 +32,7 @@ h2, p {
     text-align: center;
     margin-left: 450px;
 }
-#word-blanks, #wrong-guesses, #guesses-left {
+#word-blanks, #wrong-guesses, #guesses-left, #wins {
     text-align: center;
     margin-left: 450px;
-}
-#winBanner{
-visibility: hidden;
-}
-#loserBanner{
-visibility: hidden;
 }
